test fix gap header

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -154,7 +154,7 @@ body {
   background-size: 470px 470px, 970px 970px, 410px 410px, 610px 610px, 530px 530px, 730px 730px, 100% 100%;
   display: grid;
   grid-template-columns: 3rem [header-start] 1fr [header-end] 3rem;
-  grid-template-rows: min-content 1fr minmax(min-content, max-content);
+  grid-template-rows: min-content minmax(1fr, 30rem) minmax(min-content, max-content);
   height: 100vh; }
   @media only screen and (max-width: 50em) {
     .header {
